# backend/src/main/java/at/fraihs/cookoff/auth/interfaces/rest/AuthController.java
@@ -1,7 +1,9 @@
 package at.fraihs.cookoff.auth.interfaces.rest;
 
+import at.fraihs.cookoff.auth.application.service.AccessLinkLoginService;
 import at.fraihs.cookoff.auth.application.service.LoginService;
 import at.fraihs.cookoff.shared.web.openapi.api.AuthApi;
+import at.fraihs.cookoff.shared.web.openapi.model.AccessLinkLoginRequest;
 import at.fraihs.cookoff.shared.web.openapi.model.ApiMeta;
 import at.fraihs.cookoff.shared.web.openapi.model.AuthToken;
 import at.fraihs.cookoff.shared.web.openapi.model.AuthTokenResponse;
@@ -18,10 +20,17 @@ import java.util.UUID;
 public class AuthController implements AuthApi {
 
     private final LoginService loginService;
+    private final AccessLinkLoginService accessLinkLoginService;
 
     @Override
     public ResponseEntity<AuthTokenResponse> login(LoginRequest loginRequest) {
         AuthToken token = loginService.execute(loginRequest);
+        return ResponseEntity.ok(new AuthTokenResponse(token, meta()));
+    }
+
+    @Override
+    public ResponseEntity<AuthTokenResponse> accessLinkLogin(AccessLinkLoginRequest accessLinkLoginRequest) {
+        AuthToken token = accessLinkLoginService.execute(accessLinkLoginRequest);
         return ResponseEntity.ok(new AuthTokenResponse(token, meta()));
     }
 
